# rust-blockchain

./: .env.example  .gitignore  Cargo.toml  README.md  coverage_report.sh  rest_api.postman_collection.json
.github/workflows/: build.yaml  coverage.yaml  lint.yaml  test.yaml
doc/: rest_api.postman_collection.json
miner/: Cargo.toml
miner/src/: block_miner.rs  cli.rs  lib.rs  main.rs  mining_loop.rs  node_client.rs
node/: Cargo.toml
node/src/: api.rs  database.rs  lib.rs  main.rs  mempool.rs  miner.rs  model.rs  node.rs  peer.rs  server.rs  transaction_pool.rs  util.rs
node/src/database/: accounts.rs  blocks.rs  mempool.rs
node/src/model/: address.rs  blockchain.rs  transaction_pool.rs
node/src/util/: config.rs  context.rs  execution.rs  termination.rs
node/tests/: api_test.rs  peer_test.rs  utils.rs
node/tests/common/: mod.rs  server.rs
scripts/: coverage_report.sh
spec/: Cargo.toml
spec/src/: address.rs  block.rs  blockchain.rs  consensus.rs  database.rs  lib.rs  transaction.rs  types.rs  validators.rs
spec/src/types/: address.rs  block.rs  coin.rs  hash.rs  network.rs  transaction.rs
spec/src/validators/: block.rs  chain.rs  coinbase.rs  genesis.rs  proof_of_work.rs  transaction.rs
spec/tests/: util.rs  validators_test.rs
src/: api.rs  blockchain.rs  config.rs  logger.rs  main.rs  miner.rs  model.rs  peer.rs  shared_data.rs  transaction_pool.rs  util.rs
src/blockchain/: block.rs  blockchain.rs  mod.rs  transaction.rs
src/model/: account_balance_map.rs  address.rs  block.rs  blockchain.rs  transaction.rs  transaction_pool.rs
src/util/: config.rs  context.rs  execution.rs  logger.rs
tests/: api_test.rs  common.rs  integration_test.rs  peer_test.rs  rest_api_test.rs
tests/common/: api.rs  api_utils.rs  mod.rs  server.rs  server_utils.rs
