[package]
name = "rust_blockchain"
version = "0.2.0"
edition = "2018"

[dependencies]
actix-rt = "1.0"
actix-web = "2.0.0"
chrono = "0.4"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
env_logger = "0.8.3"
ethereum-types = "0.9.2"
futures = "0.3.5"
log = "0.4.0"
rust-crypto = "0.2.36"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
thiserror = "1.0"