[package]
name = "rust_blockchain"
version = "0.4.0"
edition = "2018"

[dependencies]
actix-web = "3"
anyhow = "1.0"
chrono = "0.4"
crossbeam-utils = "0.8.5"
ctrlc = { version = "3.0", features = ["termination"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
env_logger = "0.8.3"
ethereum-types = "0.9.2"
futures = "0.3"
isahc = "1.5"
log = "0.4.0"
rust-crypto = "^0.2"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2.0.2"
nix = "0.23.0"
serial_test = "0.5.1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt", "run-cargo-check", "run-cargo-test"]