[package]
name = "node"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spec = { path = "../spec" }

actix-web = "4.1.0"
anyhow = "1.0.58"
chrono = "0.4.19"
clap = { version = "3.2.8", features = ["derive"] }
crossbeam-utils = "0.8.10"
ctrlc = { version = "3.2.2", features = ["termination"] }
env_logger = "0.9.0"
ethereum-types = "0.13.1"
futures = "0.3.21"
hex = "0.4.3"
isahc = "1.7.2"
log = "0.4.17"
rust-crypto = "0.2.36"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"

[dev-dependencies]
serial_test = "0.8.0"
rusty-fork = "0.3.0"
miner = { path = "../miner" }

[dev-dependencies.cargo-husky]
version = "1.5"
default-features = false
features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt", "run-cargo-check", "run-cargo-test"]
