[package]
name = "spec"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
bincode = "1.3.3"
chrono = "0.4.19"
hex = "0.4.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sha3 = "0.10.1"
thiserror = "1.0.31"